Prepare for GitHub Pages deployment

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "berlin-rent-map",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://YOUR_GITHUB_USERNAME.github.io/berlin-rent-map",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -26,7 +27,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -49,6 +52,7 @@
   "devDependencies": {
     "@types/leaflet": "^1.9.8",
     "@types/geojson": "^7946.0.10",
-    "@types/topojson-client": "^3.1.4"
+    "@types/topojson-client": "^3.1.4",
+    "gh-pages": "^6.1.1"
   }
 }
